Испрваил код в соответствии с ревью